--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
         android:layout_height="27dp"
         android:layout_marginEnd="260dp"
         android:layout_marginBottom="23dp"
+        android:onClick="tournament_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/cup_black" />
